# rusty-lambda-fxn

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  zig-installer.sh
src/: main.rs
